--- a/JeffSite/Views/Home/BioCompleta.cshtml
+++ b/JeffSite/Views/Home/BioCompleta.cshtml
@@ -1,45 +1,4 @@
-﻿<style>
-    h1{
-        letter-spacing: 0.3em;
-        font-size: 25px;
-        margin-top: 40px;
-        padding-left: 20px;
-        padding-bottom: 20px;
-    }
-
-    h1 span{
-        text-shadow: #1b6ec2 0 15px 2px;
-    }
-    
-    p{
-      letter-spacing: 0.1em;
-      padding-top: 10px;
-      padding-left: 40px;
-      padding-right: 20px;
-      text-align: justify;
-    }
-    
-    p span.primeira-letra{
-      font-size: 20px;
-      padding-left: 20px;
-    }
-    
-    span.negrito{
-      text-shadow: #1b6ec2  1px 2px ;
-    }
-    
-    ul.opcao-corpo li{
-        list-style:none;
-        padding:0;
-        margin:0;
-        margin-left: 50px;
-        letter-spacing: 0.1em;
-    }
-    
-    
-</style>
-
-<h1>Um poquinho <span>sobre<span>...</h1>
+﻿<h1 class="Titulo">Um poquinho <span>sobre<span>...</h1>
 
 <p>
     <span class="primeira-letra">A</span>utor de obras de fantasia, suspense, terror e sci-fi, redator freelancer, roteirista de quadrinhos, produtor de conteúdo de boardgames e RPG, membro ativo da ABERST (Associação Brasileira de Escritores de Romance Policial, Suspense e Terror), ator, escultor e mestre de RPG há 31 anos. 
