--- a/JeffSite/Views/Home/BioCompleta.cshtml
+++ b/JeffSite/Views/Home/BioCompleta.cshtml
@@ -1,4 +1,4 @@
-﻿<h1 class="Titulo">Um poquinho <span>sobre<span>...</h1>
+﻿<h1 class="Titulo">Um pouquinho <span>sobre<span>...</h1>
 
 <p>
     <span class="primeira-letra">A</span>utor de obras de fantasia, suspense, terror e sci-fi, redator freelancer, roteirista de quadrinhos, produtor de conteúdo de boardgames e RPG, membro ativo da ABERST (Associação Brasileira de Escritores de Romance Policial, Suspense e Terror), ator, escultor e mestre de RPG há 31 anos. 
